Tue May 12 12:08:35 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* file-get-trans.c (diskfs_S_file_get_translator) [S_ISCHR ||
 	S_ISBLK]: Free BUF after using it.  Reported by Katusya Tanaka
 	(wyvern@pb3.so-net.ne.jp).

Tue Sep 23 15:28:57 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* file-reparent.c (diskfs_S_file_reparent): Use diskfs_nrele
 	instead of protocol-violating up-tree lock.
	* peropen-rele.c (diskfs_release_peropen): Likewise.

1997-09-18  Miles Bader  <miles@gnu.ai.mit.edu>

	* priv.h (fs_control_port): Declaration removed.
	(_diskfs_nosuid, _diskfs_noexec): Renamed from nosuid & noexec.
	* init-init.c: Prepend "_diskfs" to uses of NOSUID & NOEXEC.
	* file-exec.c (diskfs_S_file_exec): Likewise.
	* opts-std-startup.c (parse_startup_opt): Likewise.
	* opts-std-runtime.c (set_opts): Likewise.
	(OPT_EXEC_OK, OPT_SUID_OK): Rename definitions from ..._OPT.

1997-09-16  Miles Bader  <miles@gnu.ai.mit.edu>

	* opts-append-std.c (diskfs_append_std_options): Add --no-suid and
	--no-exec options.  Don't deallocate ARGZ when we get an error.

Tue Sep 16 14:37:51 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* opts-append-std.c (diskfs_append_std_options): Add --no-suid and
	--no-exec when appropriate.
	* priv.h (nosuid, noexec): New variables.
	* init-init.c (nosuid, noexec): New variables, initialized to zero.
	* file-exec.c (diskfs_S_file_exec): If noexec is on, then prohibit
	all execution with EACCES.  If nosuid is on, then prohibit setuid
	or setgid execution by silently omitting the uid substitution.
	* opts-std-startup.c (parse_startup_opt): Implement --no-suid and
	--no-exec. 
	* opts-common.c (diskfs_common_options): Add --no-suid and
	--no-exec. 
	* opts-std-runtime.c (struct parse_hook): Add nosuid and noexec. 
	(parse_opt) [cases 'S', 'E', OPT_SUID_OK, OPT_EXEC_OK] Understand
	--no-suid, --no-exec, --suid-ok, and --exec-ok.  
	(parse_opt) [case ARGP_KEY_INIT]: Initialize H->nosuid and
	H->noexec. 